Bug 85454 - Unigine Sanctuary with Wine crashes on Mesa Git
Summary: Unigine Sanctuary with Wine crashes on Mesa Git
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-25 20:06 UTC by Nick Sarnie
Modified: 2014-10-29 10:03 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
backtrace (9.91 KB, text/plain)
2014-10-25 20:06 UTC, Nick Sarnie
Details
stderr (359.89 KB, text/plain)
2014-10-27 14:26 UTC, Nick Sarnie
Details
radeon/llvm: Increase maximum branch depth (1.82 KB, patch)
2014-10-28 02:30 UTC, Michel Dänzer
Details | Splinter Review
radeon/llvm: Dynamically allocate branch/loop stack arrays (3.03 KB, patch)
2014-10-28 10:08 UTC, Michel Dänzer
Details | Splinter Review

Description Nick Sarnie 2014-10-25 20:06:33 UTC
Created attachment 108416 [details]
backtrace

Hi guys, 

When testing the Unigine Sanctuary windows benchmark, it crashes during the inital loading screen with normal wined3d, with a crash in radeonsi.so. With gallium nine, it works perfectly with no crashes.

I am using Mesa Git on a Radeon HD 7950. I can test any patches. 

The backtrace is attached.

Thanks!
Comment 1 Michel Dänzer 2014-10-27 07:43:58 UTC
Can you run it with the environment variable R600_DEBUG=vs,ps and attach the stderr output from that?

P.S. Any particular reason for not using the Linux version of Unigine Sanctuary?
Comment 2 Nick Sarnie 2014-10-27 14:26:37 UTC
Created attachment 108512 [details]
stderr

stderr
Comment 3 Nick Sarnie 2014-10-27 14:27:26 UTC
(In reply to Michel Dänzer from comment #1)
> Can you run it with the environment variable R600_DEBUG=vs,ps and attach the
> stderr output from that?
> 
> P.S. Any particular reason for not using the Linux version of Unigine
> Sanctuary?

Hi Michel, thanks for your response. The stderr output is attached.


PS. The crash does NOT occur in native Linux Sanctuary, it works perfectly. I was testing the preformance of wine d3d9 vs gallium nine.
Comment 4 Michel Dänzer 2014-10-28 02:30:55 UTC
Created attachment 108544 [details] [review]
radeon/llvm: Increase maximum branch depth

Does this patch fix the problem?
Comment 5 Nick Sarnie 2014-10-28 03:12:35 UTC
(In reply to Michel Dänzer from comment #4)
> Created attachment 108544 [details] [review] [review]
> radeon/llvm: Increase maximum branch depth
> 
> Does this patch fix the problem?

Wow, that did it. Great job and thanks.

If you need this,
Tested-by: Nick Sarnie <commendsarnex@gmail.com>


Thanks again.
Comment 6 Michel Dänzer 2014-10-28 10:08:43 UTC
Created attachment 108567 [details] [review]
radeon/llvm: Dynamically allocate branch/loop stack arrays

This should be an even better fix, does it work as well?
Comment 7 Nick Sarnie 2014-10-28 14:53:27 UTC
(In reply to Michel Dänzer from comment #6)
> Created attachment 108567 [details] [review] [review]
> radeon/llvm: Dynamically allocate branch/loop stack arrays
> 
> This should be an even better fix, does it work as well?

Hi Michel,

That patch works for me also.


Thanks again.
Comment 8 Michel Dänzer 2014-10-29 10:03:55 UTC
Module: Mesa
Branch: master
Commit: 402ab50bedf9fba7654e63a6f2e808714714284d
URL:    http://cgit.freedesktop.org/mesa/mesa/commit/?id=402ab50bedf9fba7654e63a6f2e808714714284d

Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Tue Oct 28 11:28:29 2014 +0900

radeon/llvm: Dynamically allocate branch/loop stack arrays


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.